# candle

./: CMakeLists.txt
input/: test1.cfg  test2.cfg  test3.cfg
lib/assimp-3.2/: CMakeLists.txt
src/: aabb.cpp  aabb.h  assimp_processor.cpp  assimp_processor.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  collisioninfo.h  emissive_mesh.h  main.cpp  material.cpp  material.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  model.cpp  model.h  modelloader.cpp  modelloader.h  modelprocessor.h  octree.cpp  octree.h  octreeold.cpp  octreeold.h  octreescene.cpp  octreescene.h  output_util.cpp  output_util.h  poolallocator.cpp  poolallocator.h  ray.cpp  ray.h  ray_mesh_intersection.h  raytracer.cpp  raytracer.h  renderconfig.h  rendercontext.h  scene.cpp  (+6 more)
